# trancoder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  audio.c  concat copy 2.c  concat.c  concat.sh  debug_tools.c  debug_tools.h  file.c  file.h  filter.c  main.c  take_input.c  video_queue.c  video_queue.h
filters/: audio_encoder.c  audio_encoder.h  audio_hash.c  audio_hash.h  audio_play.c  audio_resample.c  audio_resample.h  delay.c  delay.h  delay2.c  delay2.h  edges.c  edges.h  ffmpeg_filter_audio.c  ffmpeg_filter_audio.h  ffmpeg_filter_video.c  ffmpeg_filter_video.h  filter.c  filter.h  pts.c  pts.h  samples_per_frame.c  samples_per_frame.h  swscale.c  swscale.h  video_display.c  video_display.h  video_encoder.c  video_encoder.h  video_hash.c  video_hash.h
test/: album.c  album.sh  concat.c  display_roach.c  display_roach.sh  main.c  main_stream.c  run.sh  spinning_cockroach.c  stream_list.c  stream_list.sh  test_frame_list.c  test_frame_list.sh
